schedule history and cancle match, fix error